# vestigas

./: .flake8  Makefile  README.md  VESTIGAS_Backend_Assignment.md  docker-compose.yml  pytest.ini
backend/: Dockerfile  data_access.py  database.py  main.py  orm_models.py  pyproject.toml  requirements.txt  schemas.py  start.sh
backend/backend_data/: delivery.db
backend/partners/: client.py  transformers.py
backend/tests/: conftest.py  test_main.py
backend/utils/: retry.py
backend_data/: delivery.db
mock_logistics_a/: app.py  data.json  data_gm.json  requirements.txt
mock_logistics_b/: Dockerfile  app.py  data_gm.json  requirements.txt
